# lava

./: .gitignore  Cargo.toml  README.md  flake.nix  package.nix
examples/: default.jsonc  double_waveform.jsonc  grey_venue.jsonc
src/: app.rs  config.rs  consts.glsl  frag.glsl  main.rs  model.rs  vert.glsl
src/audio/: analyzer.rs  audio_demo.rs  audio_engine.rs  circular_buffer.rs  mod.rs  sample_buffer.rs  sliding_ft.rs  stream.rs
src/fractal/: fractal_compute_pipeline.rs
src/stats/: frame_timer.rs  mod.rs
src/video/: app.rs  create_write_descriptor_set.rs  fs.glsl  fs.rs  global_writes.rs  mesh.rs  mod.rs  model.rs  panel.rs  panel_transform.rs  render_context.rs  render_engine.rs  shader_types.rs  shaders.rs  texture.rs  video_engine.rs  window_size_dependent_setup.rs
src/video/shaders/: consts.glsl  fs.glsl  fs.rs  gray_venue_gridnode.glsl  image.glsl  masked_pattern.glsl  mod.rs  noise.glsl  oklab.glsl  pattern.glsl  rainbow.glsl  simple_pattern.glsl  spectrogram.glsl  spectrogram.rs  vs.glsl  vs.rs  waveform.glsl  waveform.rs
src/video/shaders/lib/: consts.glsl  gridnode.glsl  in_out.glsl  noise.glsl  oklab.glsl
src/video/shaders/structs/: pattern.glsl
src/video/shaders/uniforms/: aspect_ratio.glsl  bass.glsl  dft.glsl  image.glsl  samples.glsl  scale_x.glsl  stabilization.glsl  transform.glsl
