[package]
name = "lava"
version = "0.0.2"
edition = "2024"

[lints.rust]
dead_code = "allow"

[dependencies]
cpal = {version = "0.16.0", features = ["jack"]}

glam = "0.30.9"
png = "0.18.0"

vulkano = "0.35.2"
vulkano-macros = "0.35.0"
vulkano-shaders = "0.35.0"
vulkano-util = "0.35.0"
winit = "0.30.12"
