[package]
name = "lava"
version = "0.0.2"
edition = "2024"

[lints.rust]
dead_code = "allow"

[dependencies]
cpal = { version = "0.17.1", features = ["jack"] }

glam = "0.32.0"
png = "0.18.1"

vulkano = "0.35.2"
vulkano-macros = "0.35.0"
vulkano-shaders = "0.35.0"
vulkano-util = "0.35.0"
vulkano-taskgraph = "0.35.1"
winit = "0.31.0-beta.2"
