[package]
name = "lava"
version = "0.0.2"
edition = "2024"

[lints.rust]
dead_code = "allow"

[dependencies]
cpal = { version = "0.17.1", features = ["jack"] }

glam = { version = "0.32.0", features = ["serde"] }
image = "0.25.9"

vulkano = {version = "0.35.2", features = ["serde"]}
vulkano-macros = "0.35.0"
vulkano-shaders = "0.35.0"
vulkano-util = "0.35.0"
vulkano-taskgraph = "0.35.1"
winit = { version = "0.31.0-beta.2", features = ["serde"] }

serde = { version = "1.0.228", features = ["derive"] }
serde_json = "1.0.149"
json5 = "1.3.1"